Fix collapse bugs in annotation transcludes

--- a/css/default.css
+++ b/css/default.css
@@ -57,7 +57,7 @@
     */
 
 .collapse {
-    min-height: 4.5rem;
+    min-height: 5rem;
     position: relative;
     overflow: hidden;
     padding: 0 0 2rem 0;
@@ -86,12 +86,6 @@
 .collapse .abstract-collapse.abstract {
     margin-left: calc(-0.5em - 2px);
 }
-.collapse .abstract-collapse:not(.abstract) {
-    margin: 1.5em 0 0.25em 0;
-}
-.collapse.expanded > .abstract-collapse:not(.abstract) {
-    margin-bottom: 0;
-}
 .collapse:not(.expanded) > .abstract-collapse {
     pointer-events: none;
     position: relative;
@@ -116,6 +110,7 @@
     right: 0;
     width: 100%;
     height: 100%;
+    z-index: 10;
     font-weight: inherit;
     font-style: inherit;
     font-size: 0.875em;
@@ -126,7 +121,7 @@
         box-shadow 0.1s ease;
 }
 .disclosure-button:hover {
-    z-index: 1;
+    z-index: 11;
     box-shadow:
         0.5em 0 0 0 var(--GW-collapse-disclosure-button-hover-color) inset;
 }
@@ -216,7 +211,7 @@ section.collapse {
 section.collapse > *:first-child {
     margin-top: 0;
     position: relative;
-    z-index: 2;
+    z-index: 12;
     pointer-events: none;
     margin-left: -0.5rem;
 }
@@ -241,25 +236,33 @@ section.collapse > :first-child > a {
     position: relative;
 }
 
+section.collapse .abstract-collapse:not(.abstract) {
+    margin: 1.5em 0 0.25em 0;
+}
+section.collapse.expanded > .abstract-collapse:not(.abstract) {
+    margin-bottom: 0;
+}
+
 /*  Collapsible non-section blocks.
     */
 :not(section).collapse {
     margin-left: -1em;
 }
 :not(section).collapse:not(.expanded) {
-    padding: 0 0 0 1em;
+    padding: 3rem 0 2rem 1em;
 }
 :not(section).collapse:not(.expanded) > .disclosure-button::before,
 :not(section).collapse:not(.expanded) > .disclosure-button::after {
     opacity: 0.95;
 }
-:not(section).collapse:not(.expanded) > .disclosure-button ~ :not(.abstract-collapse) {
-    max-height: 5rem;
-}
 :not(section).collapse.expanded {
     padding-top: 3.5rem;
     padding-bottom: 2.5rem;
     padding: 3.5rem 0 2.5rem 1em;
+}
+
+:not(section).collapse:not(.expanded) .abstract-collapse:not(.abstract) {
+    margin: 0.5em 0;
 }
 
 /*  Collapsible code blocks.
